--- a/WebContent/css/portfolio_common.css
+++ b/WebContent/css/portfolio_common.css
@@ -99,7 +99,7 @@ p {
 }
 
 
-/* ·Î°í ÀÌ¹ÌÁö */
+/* ï¿½Î°ï¿½ ï¿½Ì¹ï¿½ï¿½ï¿½ */
 #header > div:first-of-type > a:first-of-type{
 	width: 10%;
 	vertical-align: top;
@@ -141,7 +141,7 @@ p {
 	margin-right: 10px;
 }
 
-	/* °Ë»öÃ¢ */
+	/* ï¿½Ë»ï¿½Ã¢ */
 	
 .search_area{
 	display: none;
@@ -200,27 +200,40 @@ p {
 
 /*footer-----------------------------------*/
 #footer{
-	position: relative;
+	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
     background-color: gray;
     margin-left: 0px;
+    height: 75px;
+    border-top: 1px solid black;
 }
 
-#footer > ul{
-	text-align: left;
-	margin-leftp: 20px;
-	margin-bottom: 5px;
-}
-#footer h6{
-	text-align: center;
-	margin-bottom: 0px;
-}
-
-#footer > ul > li{
+#footer > div{
 	display: inline-block;
-	font-size: 12px;
-	color: white;
-	margin-left: 10px;
+	width: 30%;
 }
+
+#footer > #middle-controller > img{
+	width: 50px;
+	height: 50px;
+}
+
+#palyer-area{
+	width: 100%;
+	height: 810px;
+	position: fixed;
+	top: 50px;
+	left: 150%;
+	background-color: gray;
+	border: 1px solid black;
+}
+
+#player-area > #player{
+	width: 50%;
+	height: 50%;
+	margin: 20%;
+}
+
+
