--- a/WebContent/css/portfolio_common.css
+++ b/WebContent/css/portfolio_common.css
@@ -48,9 +48,9 @@ h2 {
 }
 
 p {
-    text-align: left;
+	text-align: left;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 400;
 }
 
@@ -199,28 +199,8 @@ p {
 
 
 /*footer-----------------------------------*/
-#footer{
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-    background-color: gray;
-    margin-left: 0px;
-    height: 75px;
-    border-top: 1px solid black;
-}
 
-#footer > div{
-	display: inline-block;
-	width: 30%;
-}
-
-#footer > #middle-controller > img{
-	width: 50px;
-	height: 50px;
-}
-
-#palyer-area{
+#player-area{
 	width: 100%;
 	height: 810px;
 	position: fixed;
@@ -230,10 +210,71 @@ p {
 	border: 1px solid black;
 }
 
-#player-area > #player{
-	width: 50%;
-	height: 50%;
-	margin: 20%;
+#player-area.active{
+	width: 100%;
+	height: 810px;
+	position: fixed;
+	top: 50px;
+	left: 0;
+	background-color: gray;
+	border: 1px solid black;
 }
 
+#footer{
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+    background-color: gray;
+    margin-left: 0px;
+    height: 55px;
+    border-top: 1px solid black;
+    padding: 10px;
+}
 
+#footer > div{
+	display: inline-block;
+	width: 30%;
+	vertical-align: middle;
+}
+
+#footer > #left-controller{
+	text-align: right;
+}
+
+#footer > #left-controller > button:first-of-type > img{
+	transform: rotate(180deg);
+}
+
+#footer > #right-controller{
+	text-align: left;
+}
+
+#footer > #middle-controller > img{
+	width: 50px;
+	height: 50px;
+	position: relative;
+	top: 5px;
+}
+
+#footer > #middle-controller > p{
+	display: inline-block;
+	max-width: 400px;
+	margin-left: 10px;
+	position: relative;
+	top: 15px;
+  	
+  	text-overflow: ellipsis;
+  	overflow: hidden;
+  	white-space: nowrap;
+}
+
+#footer > div > button{
+	background-color: transparent;
+	border: none;
+}
+
+#footer > div > button > img{
+	width: 30px;
+	height: 30px;
+}
